# CVapp

./: .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  requirements.txt
api/: __init__.py  app.py  deps.py  schemas.py
api/routers/: __init__.py  postings.py
api/tests/: conftest.py  test_postings_api.py
docs/: PROGRESS.md  Project_Dossier.md
ingestion/: __init__.py  classifiers.py  db.py  models.py  pipeline.py  registry.py  storage.py
ingestion/adapters/: __init__.py  base.py  greenhouse.py  lever.py  workday.py
ingestion/config/: classifier_keywords.yaml  registry.yaml
ingestion/migrations/: env.py
ingestion/migrations/versions/: 0001_initial_schema.py
ingestion/tests/: conftest.py  test_citi_region_grain.py  test_classifiers.py  test_cross_source_dedup.py  test_greenhouse_adapter.py  test_lever_adapter.py  test_pipeline.py  test_storage.py  test_workday_adapter.py  test_workday_collapse.py
ingestion/tests/fixtures/: greenhouse_point72.json  lever_wealthfront.json  workday_barclays.json  workday_citi_earlycareers.json
