[project]
name = "ib-platform-ingestion"
version = "0.1.0"
description = "IB internship application platform — ingestion layer (dossier §3)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "httpx>=0.27",
    "SQLAlchemy>=2",
    "alembic>=1.13",
    "psycopg[binary]>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["ingestion/tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
