[project]
name = "ib-platform"
version = "0.1.0"
description = "IB internship application platform — ingestion (§3) + read API (§6.1)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "PyYAML>=6",
    "httpx>=0.27",
    "SQLAlchemy>=2",
    "alembic>=1.13",
    "psycopg[binary]>=3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["ingestion/tests", "api/tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
